--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gus's Slideshow</title>
     <link rel="stylesheet" href="slideshow.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -16,8 +20,7 @@
       </div>
 
       <div class="main__automation">
-        <button id="play">Play</button>
-        <button id="stop">Stop</button>
+        <button id="play"><i class="fa fa-play"></i>&nbsp;Play</button>
       </div>
     </main>
     <script src="slideshow.js"></script>
